changed the background color of the website and organised the html file better

--- a/index.html
+++ b/index.html
@@ -14,16 +14,15 @@
     <body>
         <h1>Welcome to Courses-Hub</h1>
 
-        <div><p>Hello and welcome to my first website project that I hope to work on over the next couple of weeks.  Some of the goals of the website are: 
-        <ul>
+        <p id="introduction-p">Hello and welcome to my first website project that I hope to work on over the next couple of weeks.  Some of the goals of the website are: 
+        </p>
+        <ul id="objective-list">
             <li>Practice the use of HTML and CSS in a project without a guided tutorial</li>
             <li>Learn more about various features, as well as more of a independant learning.</li>
             <li>Practice the git workflow</li>
             <li>Develop a better understaning of concepts</li>
             <li>Have Fun</li>
-
         </ul>
-        </p>
-        </div>
+
     </body>
 </html>
