added image, 3 id's and 1 class to file

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <body>
         <h1>Welcome to Courses-Hub</h1>
 
+        <div class=photo-text>
+            <img src="Pile_of_books.jpg" id="myImage" alt="photo of books">
+        </div>
+
+        <div>
         <p id="introduction-p">Hello and welcome to my first website project that I hope to work on over the next couple of weeks.  Some of the goals of the website are: 
         </p>
         <ul id="objective-list">
@@ -23,6 +28,8 @@
             <li>Develop a better understaning of concepts</li>
             <li>Have Fun</li>
         </ul>
+        </div>
+    
 
     </body>
 </html>
