added border, box-shadow to image and adjusted the color of the website a bit

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
         </div>
 
         <div>
-        <p id="introduction-p">Hello and welcome to my first website project that I hope to work on over the next couple of weeks.  Some of the goals of the website are: 
+        <p id="introduction-par">Hello and welcome to my first website project that I hope to work on over the next couple of weeks.  Some of the goals of the website are: 
+        </p>
+        <p id="goals-par">
+            My goals with this website are to practice the use and develop a better understand of HTML and CSS, practice the git workflow. <br>  Develop a better
+            understanding of HTML and CSS concepts through project practice, practice independant learning without a courses help. <br> Have fun :)
         </p>
         <ul id="objective-list">
             <li>Practice the use of HTML and CSS in a project without a guided tutorial</li>
