--- a/index.html
+++ b/index.html
@@ -19,21 +19,17 @@
         </div>
 
         <div>
-        <p id="introduction-par">Hello and welcome to my first website project that I hope to work on over the next couple of weeks.  Some of the goals of the website are: 
-        </p>
         <p id="goals-par">
-            My goals with this website are to practice the use and develop a better understand of HTML and CSS, practice the git workflow. <br>  Develop a better
+            My goals with this website are to practice the use of and develop a better understand of HTML and CSS, practice the git workflow. <br>  Develop a better
             understanding of HTML and CSS concepts through project practice, practice independant learning without a courses help. <br> Have fun :)
         </p>
-        <ul id="objective-list">
-            <li>Practice the use of HTML and CSS in a project without a guided tutorial</li>
-            <li>Learn more about various features, as well as more of a independant learning.</li>
-            <li>Practice the git workflow</li>
-            <li>Develop a better understaning of concepts</li>
-            <li>Have Fun</li>
-        </ul>
+        <h2 id="update-header">Here's some things that still need to be done for this page:</h2>
+        <ol id="updates-list">
+            <li>Figure out the margin, padding</li>
+            <li>Move the introduction over an image and rewrite the short introduction</li>
+            <li>find a font for the paragraphs</li>
+        </ol>
         </div>
-    
 
     </body>
 </html>
