started working on the nav bar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
 
-        
+        <nav id="navbar">
+            <ul id="navLinks">
+                <li><a href="">Home</a></li>
+                <li><a href="">Courses</a></li>
+            </ul>
+        </nav>
     </head>
     <body>
         <h1>Welcome to Courses-Hub</h1>
