updated nav bar, added some comments

--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
 
-        <nav id="navbar">
-            <ul id="navLinks">
-                <li><a href="">Home</a></li>
-                <li><a href="">Courses</a></li>
-            </ul>
-        </nav>
     </head>
     <body>
+        <ul id="navLinks">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#courses">Courses</a></li>
+        </ul>
+
         <h1>Welcome to Courses-Hub</h1>
 
         <div class=photo-text>
