--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Courses-Hub</title>
         <link href="stylesheet.css" rel="stylesheet">
         
+        <!--Fonts for the website: Header font is Bebas Neue and paragraph font is Garamond both from Google fonts.-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
