updated the nav bar, still work in progress

--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 
     </head>
     <body>
-        <ul id="navLinks">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#courses">Courses</a></li>
+        <ul id="wtf">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="courses.html">Courses</a></li>
         </ul>
+        
 
         <h1>Welcome to Courses-Hub</h1>
 
